--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.2"
   }
 }
